@@ -4,3 +4,4 @@ tag_date = true
 
 [aliases]
 release = egg_info -RDb ''
+upload = upload --sign --identity=36580288
