@@ -1,0 +1,10 @@
+function sample_page() {
+  <header>
+    <h3>HTML in Opa</h3>
+  </header>
+  <article>
+    <div class=container>
+      <p>Learning by examples.</p>
+    </div>
+  </article>
+}
